--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -1,7 +1,7 @@
 .about {
   background-color: $grey-700;
   color: $white;
-  padding: 2rem 15px;
+  padding: 2rem 0 ;
   line-height: 2;
   .container{
     padding-right: 1.125rem;
